<resources>
    <string name="app_name">projetoconsultacep</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="preencha_todos_campos">Preencha todos os campos</string>
    <string name="usuario_ja_cadastrado">Usuario ja cadastro</string>
    <string name="cadastro_realizado">Cadastro realizado</string>
    <string name="voltar">Voltar</string>
    <string name="consultar_cep">Consultar CEP</string>
    <string name="bem_vindo_a">Bem vindo(a):</string>
    <string name="sair">Sair</string>
    <string name="usuariosenhainvalido">Usuario ou senha invalido!</string>
    <string name="consultar">Consultar</string>
    <string name="tx_logradouro">Logradouro:</string>
    <string name="bairro">Bairro:</string>
    <string name="cidade">Cidade:</string>
    <string name="ddd">DDD:</string>
</resources>